--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 20) # Enable the C++20 standard
 set(SOURCE_FILES src/server.cpp)
 
 add_executable(server ${SOURCE_FILES})
+add_compile_flags(server "-pthread")
