--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,9 @@
     "stop_token": "cpp",
     "streambuf": "cpp",
     "thread": "cpp",
-    "typeinfo": "cpp"
-  }
+    "typeinfo": "cpp",
+    "bitset": "cpp",
+    "regex": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
